Update AuthorController.java
Define a constant instead of duplicating this literal "redirect:/authors" 3 times.